--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -29,7 +29,7 @@ jobs:
           zip -Jr ./gitops-tools-linux-amd64.zip ./gitops-tools-linux-amd64
           ls -l
       - name: Set current date as env variable
-        run: echo "DATEASTAG::$(date +'%Y-%m-%d')" >> $GITHUB_ENV
+        run: echo "DATEASTAG=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
       - uses: dev-drprasad/delete-tag-and-release@v0.2.0
         with:
           delete_release: true
